--- a/css/Myth.css
+++ b/css/Myth.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
- .full-page{
+ .body{
     width: 100%;
     height: 100%;
     background-image:url(../img/World-2.avif);
